src/main.css
* {
  box-sizing: border-box;
}

:root {
    --black: #351f47;
    --black-highlight: #4a2c63;
    --medium: #634c76;
    --white: #f8eff8;
    --highlight: #f1e4f1;
    --blue: #8FB8ED;
    --red: #93439D;
}

html,
body {
  background-color: var(--white);
  color: var(--black);
  box-sizing: border-box;
  height: 100%;
  padding: 0;
  margin: 0;
  font: 1.2em sans-serif;
}

.container {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  min-height: 100%;
}
.content {
  padding: 3vw;
  flex-grow: 1;
  text-align: center;
  align-items: center;
  justify-content: center;
  width: 100%;
}

a {
    color: var(--blue);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.text-center {
    text-align: center;
}

nav {
    background: var(--black);
    padding: 12px;
    flex-grow: 0;
    flex-shrink: 0;
    text-align: center;
    font-size: 1.5rem;
    text-transform: uppercase;
    letter-spacing: 2rem;
    a {
        color: var(--white);
    }
    a:hover {
        color: var(--blue);
        text-decoration: none;
    }
}

.centered {
    text-align: center;
}

h1 {
    margin-bottom: 0;
}

h2 {
    color: var(--medium);
    margin-top: 3px;
    font-size: 1rem;
}


dialog {
    border-radius: 5px;
    border: var(--black) 2px solid;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(5px);
}

form {
    display: flex;
    flex-direction: column;
    margin: 1rem auto;
    padding: 1rem;
    width: clamp(300px, 42%, 800px);
    select {
        padding: 10px;
        background-color: white;
        border-radius: 5px;
    }
    select, input {
        border: 1px solid var(--black);
    }
}

button {
    background-color: var(--black);
    margin-top: 10px;
    padding: 6px 23px;
    cursor: pointer;
    font-weight: bold;
    color: var(--white);
    font-size: 1.2rem;
    border-radius: 5px;
    border: 1px solid var(--black);

    &:hover {
        background-color: var(--black-highlight);
    }
}

hr {
    color: var(--black);
    width: 20%;
}

hr.long {
    color: var(--highlight);
    width: 50%;
}

.text-strong {
    font-weight: bold;
}

.text-weak {
    color: var(--medium);
}

.text-sm {
    font-size: 80%;
}

#filesize {
    margin-left: 10px;
}

#textDiv > p {
    margin-top: 25px;
    width: 50%;
}


input {
    border: 1px solid #ced4da;
    transition: box-shadow 0.2s ease;
    padding: 0.375rem 0.75rem;
    border-radius: 0.25rem;
    margin-bottom: 3%;
    height: 2.3rem;
}

textarea {
    padding: 10px;
    width: 100%;
    border-radius: 5px;
    border: 1px solid var(--black);
}

.text {
    background-color: #fff;
    border: 1px solid var(--black);
    border-radius: 5px;
    padding: 5px;
    width: 70%;
    margin: auto;
}

.helper {
    margin: 10px 0 0 0;
    text-align: start;
    font-size: 0.8rem;
    color: var(--medium);
}

input[type="file"] {
    background-color: #fff;
    margin-top: 10px;
    padding: 25px 10px;
    width: 100%;
    border: 2px dashed var(--black);
    border-radius: 5px;
    cursor: pointer;

    &:hover {
        background-color: #f1f1f1;
    }

    &::file-selector-button {
        display: none;
        background-color: #fff;
        margin: auto;
        padding: 8px 16px;
        border: none;
    }
}

input[name="passphrase"] {
    width: 100%;
    min-width: 50%;
}

input:focus {
    outline: none;
    box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

select[name="deadline"] {
    width: 100%;
    margin-top: 25px;
}

.password-wrapper {
    display: inline-block;
    margin-top: 25px;
    position: relative;
    width: 100%;
}

.password-wrapper input {
    padding-right: 3em;
}

.password-wrapper .toggle-eye {
    background: none;
    border: none;
    color: var(--black);
    cursor: pointer;
    font-size: 1.2em;
    padding: 0 5px;
    border-radius: 5px;
    margin: 0;
    position: absolute;
    right: -2em;

    &:hover {
        background-color: var(--highlight);
    }
}

:user-invalid {
    border: 1px solid var(--red);
    box-shadow: 0 0 8px var(--red);
}

.d-flex {
    display: flex;
    flex-direction: column;

    &.flex-row {
        flex-direction: row;
    }
}

.section-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin-top: 50px;
}

.btn-ghost {
    background-color: var(--white);
    color: var(--black);
    border: 1px solid var(--black);
    border-radius: 5px;
    padding: 8px;
    text-decoration: none;

    &:hover {
        background-color: var(--highlight);
        text-decoration: none;
    }
}

.section-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid var(--black);
    margin-top: 8px;

    h3 {
        margin: 3px 0;
        display: inline;
        font-size: 1.2rem;
    }
    span {
        align-items: baseline;
        font-size: 0.9rem;
    }
}


input.get-link {
    width: 70ch;
    text-align: center;
    margin: 0 auto 42px auto;
    color: var(--black);
}

#tos {
    font-size: 0.8rem;
    min-width: 50%;
}

footer {
    background: var(--black);
    color: var(--white);
    padding: 12px;
    flex-grow: 0;
    flex-shrink: 0;
    text-align: center;
    font-size: 0.9rem;
    a {
        color: var(--white);
    }
    a:hover {
        color: var(--blue);
        text-decoration: none;
    }

}

/** small spinner for buttons */
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

.spinner {
  display: inline-block;
  width: 16px;
  height: 16px;
  border: 2px solid rgba(255, 255, 255, 0.2);
  border-top-color: rgba(255, 255, 255, 0.9);
  border-radius: 50%;
  animation: spin 0.6s linear infinite;
}

